force-app/main/default/objects/Channel_Action__c/Channel_Action__c.object-meta.xml
<CustomObject>
    <description>Per-channel action volumes, TPS, and cost data for a journey execution</description>
    <label>Channel Action</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Channel Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>