force-app/main/default/objects/Channel_Action__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>WhatsApp</fullName><default>false</default><label>WhatsApp</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
            <value><fullName>Call</fullName><default>false</default><label>Call</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>