force-app/main/default/objects/Channel_Action__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delivered</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>