force-app/main/default/objects/Channel_Action__c/fields/Journey_Execution__c.field-meta.xml
<CustomField>
    <fullName>Journey_Execution__c</fullName>
    <label>Journey Execution</label>
    <referenceTo>Journey_Execution__c</referenceTo>
    <relationshipLabel>Channel Actions</relationshipLabel>
    <relationshipName>Channel_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>