force-app/main/default/objects/Channel_Action__c/fields/Planned_Volume__c.field-meta.xml
<CustomField>
    <fullName>Planned_Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Planned Volume</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>