force-app/main/default/objects/Channel_Action__c/fields/Required_TPS__c.field-meta.xml
<CustomField>
    <fullName>Required_TPS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Required TPS</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>